[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = { version = "1.26.0", features = ["full"] }
toml = "0.8.19"
cargo-manifest = "0.17.0"
serde = {version = "1.0", features =["derive"]}
serde_json = "1.0.134"
serde_yaml = "0.9.34"
log = "0.4.22"
env_logger = "0.11.5"
indexmap = "1.9"
leaky-bucket = "1.1.2"
rand = "0.8.5"

