[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
shuttle-actix-web = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-service = "0.49.0"
tokio = { version = "1.26.0", features = ["full"] }
toml = "0.8.19"
cargo-manifest = "0.17.0"
serde = {version = "1.0", features =["derive"]}
serde_json = "1.0.134"
serde_yaml = "0.9.34"
log = "0.4.22"
env_logger = "0.11.5"
indexmap = "1.9"
leaky-bucket = "1.1.2"
rand = "0.8.5"
jsonwebtoken = "9.3.0"
rsa = "0.9.7"
pem = "1.0"
shuttle-shared-db = {version = "0.49.0", features = ["postgres", "sqlx"]}
deadpool-postgres = "0.10"
tokio-postgres = "0.7"
sqlx = { version = "0.8.2" , features = ["uuid", "time", "chrono"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = {version = "0.4.39", feature = ["serde"]}
dotenv = "0.15"
time = { version = "0.3", features = ["serde"] }
anyhow = "1.0.95"
html-escape = "0.2.13"